解决过时方法